syntax = "proto3";

package voter.users.v1;

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/hi20160616/voter/api/voter/v1;v1";

service UsersAPI {
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse) {
    option (google.api.http) = {
      get: "/v1/{parent=users/*/list}"
    };
  }
  rpc GetUser(GetUserRequest) returns (User) {
    option (google.api.http) = {
      get: "/v1/{name=users/*}"
    };
  }
  rpc SearchUsers(SearchUsersRequest) returns (SearchUsersResponse) {
    option (google.api.http) = {
      get: "/v1/{name=users/*/search}"
    };
  }
  rpc CreateUser(CreateUserRequest) returns (User) {
    option (google.api.http) = {
      post: "/v1/{parent=users/*/create}"
      body: "user"
    };
  }
  rpc UpdateUser(UpdateUserRequest) returns (User) {
    option (google.api.http) = {
      patch: "/v1/{user.name=users/*/update}"
      body: "user"
    };
  }
  rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/{name=users/*/delete}"
    };
  }
  rpc UndeleteUser(UndeleteUserRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/{name=users/*/undelete}"
    };
  }
  rpc PermanentlyDeleteUser(PermanentlyDeleteUserRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/{name=users/*/permanently_delete}"
    };
  }
}

message ListUsersRequest{
  // The parent resource name
  string parent = 1;

  // The maximum number of items to return.
  int32 page_size = 2;

  // The next_page_token value returned from a previous List request, if any.
  string page_token = 3;
}

message ListUsersResponse{
  repeated User users = 1;
  string next_page_token = 2;
}

message GetUserRequest {
  string name = 1;
}

message SearchUsersRequest{
  string name = 1;

  // The maximum number of items to return.
  int32 page_size = 2;

  // The next_page_token value returned from a previous List request, if any.
  string page_token = 3;
}

message SearchUsersResponse{
  repeated User users = 1;
  string next_page_token = 2;
}

message CreateUserRequest {
  string parent = 1;
  User user = 2;
}

message UpdateUserRequest {
  User user = 1;
  // The update mask applies to the resource. For the `FieldMask` definition,
  // see https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#fieldmask
  google.protobuf.FieldMask update_mask = 2;
}

message DeleteUserRequest {
  string name = 1;
}

message UndeleteUserRequest {
  string name = 1;
}

message PermanentlyDeleteUserRequest {
  string name = 1;
}

message User{
  string name = 1;
  int32 user_id = 2;
  string username = 3;
  string password = 4;
  string realname = 5;
  string nickname = 6;
  string avatar_url = 7;
  string phone =8;
  string user_ip = 9;
  int32 state = 10;
  int32 deleted = 11;
  google.protobuf.Timestamp create_time = 12;
  google.protobuf.Timestamp update_time = 13;
}
